# parquet-lens

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: release.yml
docs/: 01-tauri-and-ipc.md  02-datafusion-and-arrow.md  03-parquet-format.md  04-zustand-state-management.md  README.md
scripts/: build-installer.ps1
src/: App.tsx  index.css  react-inert.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: file.rs  mod.rs  query.rs
src-tauri/src/engine/: context.rs  executor.rs  mod.rs
src-tauri/src/ipc/: mod.rs  serializer.rs
src-tauri/src/storage/: local.rs  mod.rs  remote.rs
src-tauri/tests/: query_execution_tests.rs  select_guard_tests.rs  storage_engine_tests.rs
src-tauri/tests/fixtures/: large_sample.parquet  sample.parquet
src/components/: DragOverlay.tsx  LoadingOverlay.tsx  OpenScreen.tsx  QueryError.tsx  RegistrationOverlay.tsx  RemoteConnectionModal.tsx  ResultsGrid.tsx  RowCapChip.tsx  RowGroupsTab.tsx  RunBar.tsx  SchemaPanel.tsx  SchemaTab.tsx  SqlEditor.tsx  Toast.tsx  Toolbar.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx
src/hooks/: useOpenFile.ts  useRunQuery.ts
src/lib/: format.test.ts  format.ts  tauri.test.ts  tauri.ts
src/store/: appStore.test.ts  appStore.ts
